--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am a Software Quality Tester, working with Federal Reserve Bank.</p>
       <h1>Where I'm From</h1>
-      <p>Leawood, Kansas</p>
+      <p> Kansas but origin from India </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Love to Cook, Enjoy dancing</p>
+      <p>Love to Cook, Listen to music </p>
       <h1>What's your dream job?</h1>
       <p>Work as a Full Stack Software Developer</p>
       <h1>Where do you live?</h1>
       <p>Leawood, Kansas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>It is my dream job. </p>
+      <p>I have been working as Software Quality Tester for few years and would like to transform my career to Full Stack Developer.. </p>
     </section>
 
     <footer id="footer">
